# research

./: .gitignore  CLAUDE.md  FLOW_DIAGRAM.md  README.md  pyproject.toml  requirements.txt  system-prompt.txt
data/manifests/: img_000_seed42_20251016_210441_manifest.json  img_001_seed43_20251016_210441_manifest.json  img_002_seed44_20251016_210441_manifest.json  img_003_seed45_20251016_210441_manifest.json  img_004_seed46_20251016_210441_manifest.json  img_005_seed47_20251016_210441_manifest.json  img_006_seed48_20251016_210441_manifest.json  img_007_seed49_20251016_210441_manifest.json  img_008_seed50_20251016_210441_manifest.json  img_009_seed51_20251016_210441_manifest.json  video_000_seed42_20251016_203943_manifest.json  video_001_seed43_20251016_203943_manifest.json
data/platform_tests/: README_PHASE_2.5.md
data/raw_images/: img_000_seed42_20251016_210441.json  img_001_seed43_20251016_210441.json  img_002_seed44_20251016_210441.json  img_003_seed45_20251016_210441.json  img_004_seed46_20251016_210441.json  img_005_seed47_20251016_210441.json  img_006_seed48_20251016_210441.json  img_007_seed49_20251016_210441.json  img_008_seed50_20251016_210441.json  img_009_seed51_20251016_210441.json  prompts.txt
data/raw_out_videos/: README.md
data/raw_videos/: video_000_seed42_20251016_203943.json  video_001_seed43_20251016_203943.json
scripts/embedding/: embed_c2pa.py  embed_c2pa_v2.py  extract_manifests.py
scripts/generation/: generate_images.py  generate_video_images.py  generate_videos.py
scripts/metrics/: calculate_quality_metrics.py  merge_results.py
(+8 files in other folders)
